# system76-power

./: .gitignore  Cargo.toml  Makefile  README.md  TESTING.md  build.rs  devenv.nix  devenv.yaml  gpu-perf-diagnostic.sh  install-auto-switch.sh  system76-power.conf  system76-power.conf.examples  system76-power.spec.rpkg  vendor_config
.github/workflows/: CI.yml  coverage.yml
completion/: completion.sh
data/: com.system76.PowerDaemon.conf  com.system76.PowerDaemon.policy  com.system76.PowerDaemon.service  com.system76.PowerDaemon.xml  config.toml  system76-power.conf
debian/: changelog  control  copyright  files  rules  system76-power-wake.service  system76-power.install  system76-power.maintscript  system76-power.postinst  system76-power.postrm  system76-power.preinst  system76-power.service
debian/source/: options
examples/: autoswitch.rs  fan.rs  gpio.rs  graphics.rs  hid.rs  hotplug.rs
src/: ac_events.rs  acpi_platform.rs  args.rs  backlight.rs  charge_thresholds.rs  client.rs  config.rs  cpufreq.rs  daemon.rs  daemon_macro.rs  disks.rs  display.rs  errors.rs  fan.rs  graphics.rs  hid_backlight.rs  hotplug.rs  kbd_backlight.rs  kernel_parameters.rs  keyboard.rs  laptop_mode.rs  lib.rs  logging.rs  main.rs  modprobe.rs  module.rs  mux.rs  pci.rs  polkit.rs  power_supply.rs  pstate.rs  radeon.rs  runtime_pm.rs  scsi.rs  sdp.rs  sideband.rs  signals.rs  snd.rs  state.rs  sys_devices.rs  (+4 more)
src/cli/: charge_thresholds.rs  daemon.rs  graphics.rs  mod.rs  profile.rs
src/config/: backlight.rs  defaults.rs  fans.rs  mod.rs  pci.rs  profile.rs  pstate.rs  radeon.rs  state.rs  thresholds.rs
src/daemon/: hotplug.rs  interrupt.rs  mod.rs  persistables.rs  profiles.rs
src/daemon/config/: mod.rs
src/graphics/: config.rs  device.rs  error.rs  mod.rs  mode.rs  nvidia.rs  runtime.rs  systemd.rs
src/hotplug/: emitter.rs  mod.rs  mux.rs  sideband.rs
src/kernel_parameters/: mod.rs  radeon.rs  snd.rs
zbus/: Cargo.toml
zbus/src/: lib.rs
