[package]
name = "system76-power"
version = "1.1.25"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.0.19", features = ["derive"] }
concat-in-place = "1.1.0"
dbus = "0.9"
dbus-crossroads = "0.5"
dbus-tokio = "0.7"
fern = "0.6"
futures = "0.3"
hidapi = "1.4"
inotify = "0.10"
intel-pstate = "1.0.1"
libc = "0.2"
log = "0.4"
once_cell = "1.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysfs-class = { git = "https://github.com/pop-os/sysfs-class" }
thiserror = "1.0"
tokio = { version = "1.28", features = ["macros", "rt", "time", "signal"] }
