[package]
name = "system76-power"
version = "1.2.1"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
edition = "2021"
rust-version = "1.75.0"

[workspace]
members = [ "zbus" ]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
concat-in-place = "1.1.0"
fern = "0.6"
futures-lite = "2.3.0"
hidapi = "1.5"
inotify = "0.10"
intel-pstate = "1.0.1"
libc = "0.2"
log = "0.4"
once_cell = "1.19.0"
serde_json = "1.0"
serde.workspace = true
sysfs-class = { git = "https://github.com/pop-os/sysfs-class" }
system76-power-zbus = { path = "zbus" }
thiserror = "1.0"
tokio = { version = "1.37", features = ["macros", "rt", "time", "signal"] }
zbus = { version = "3.15.2", default-features = false, features = [ "tokio"] }
zbus_polkit = { version = "3.0.0", features = ["tokio"] }
zvariant = "3.15.2"
